monitoring/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-minio-service
spec:
  type: ExternalName
  externalName: host.kubernetes.internal
  ports:
    - port: 9000
      targetPort: 9000
